# lrcshow-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
clients/py3status/: lrcshowrs.py
src/: events.rs  formatters.rs  lrc.rs  lrc_file_manager.rs  lyrics-signal-receiver.py  main.rs  player.rs  server.rs
