[package]
authors = ["Nikola Kocić <nikolakocic@gmail.com>"]
edition = "2018"
name = "lrcshow-rs"
version = "0.5.0"

[dependencies]
dbus = "0.9.7"
dbus-tree = "0.9.2"
env_logger = {version = "0.11.0", default-features = false, features = ["auto-color", "humantime"]}
log = "0.4.8"
notify = "6.1.1"
structopt = "0.3.14"
url = "2.1.1"
