[package]
authors = ["Nikola Kocić <nikolakocic@gmail.com>"]
edition = "2018"
name = "lrcshow-rs"
version = "0.5.1"

[dependencies]
clap = {version = "4.5.26", features = ["derive"]}
dbus = {version = "0.9.7", features = ["stdfd"]}
dbus-crossroads = "0.5.2"
env_logger = {version = "0.11.6", default-features = false, features = ["auto-color", "humantime"]}
log = "0.4.8"
notify = "8.0.0"
test-log = "0.2.16"
url = "2.5.4"
